<resources>
    <string name="app_name">Jajan Pasar Toko ABC</string>
    <string name="detail_food">Detail</string>
    <string name="food_name">Nama Makanan</string>
    <string name="detail">Detail</string>
    <string name="pesanan">Pesanan</string>
    <string name="about">About</string>
    <string name="yudha_yunanto_putra">Yudha Yunanto Putra</string>
    <string name="rp">Rp.</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="harga">Harga</string>
    <string name="total_harga">Total Harga</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="jumlah">Jumlah</string>
    <string name="hitung">Hitung</string>
    <string name="terima_kasih">Terima Kasih</string>
    <string name="rangkuman_order">Rangkuman Order</string>
    <string name="Kembali">kembali</string>
    <string name="hargalist">Rp. </string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="jumlahlist">pcs</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="jajanan_pasar_toko_abc">Jajanan Pasar Toko ABC</string>
    <string name="id">id</string>

</resources>