<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".activity.PesanActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/nama_makanan"/>
        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nama_makanan"
            android:textSize="20sp"
            android:text="@string/nama_makanan"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlah"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increment"
                android:layout_width="48dp"
                android:text="@string/plus"
                android:layout_height="48dp" />

            <TextView
                android:textColor="#212121"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:id="@+id/quantity_textview"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/decrement"
                android:layout_width="48dp"
                android:text="@string/minus"
                android:layout_height="48dp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>
        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:id="@+id/harga_asli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="#212121"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_harga"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"/>
        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:id="@+id/price_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="#212121"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/hitung_order"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:text="@string/hitung"/>

        <Button
            android:id="@+id/pesan_order"
            android:layout_width="match_parent"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="16dp"
            android:layout_height="match_parent"
            android:text="@string/pesan_sekarang"
            android:background="#37de00"/>

    </LinearLayout>
</ScrollView>